Переработана балансировка с прототипа на реальную. Главный поток считывает информацию  о папках и файлах ftp серовера, которые соответствуют фильтрам, и имена файлов помещает в блокируемую очередь. С ftp сервера загрузка ведется по указанным именам в несколько потоков (клоичество задается в конфигурации). Каждый загружающий поток по  имени файла - источника, выбранному из блокирующей очереди имен, создает выходной байт - стрим, затем загружает туда файл с ftp (то есть в ОП).  Затем после загрузки помещает в блокирующую очередь байт - стримов на запись.  Если произошел сбой - имя должно вернуться обратно в очередь, но пока не понятно как уберечься от постоянного возврата и зависания на одном "плохом" имени.  Сохранение байт - стримов в локальные файлы осуществляет группа потоков - писателей, которая выбирает из очереди буферизированный стримм и сохраняет в его файл      *      */     List<Thread> fileFtpLoaderThreadList;
    /** Группа потоков - писателей: выбирает из очереди буферизированный стримм и сохраняет в файл.
     *  Если произошел сбой - буферизированный стримм должен вернуться обратно в очередь.
     */

--- a/src/main/resources/vg-ftp-application.properties
+++ b/src/main/resources/vg-ftp-application.properties
@@ -1,3 +1,4 @@
-info.enable=false
-load.enable=true
+source.workdir=/
+source.catalog.tree.deep=10000
+source.read.pool.size=5
 destination.subcatalog=ftp
