Добавил логер и хардкод обрезания для маленького диска С в офисе

--- a/src/main/resources/vg-ftp-application.properties
+++ b/src/main/resources/vg-ftp-application.properties
@@ -1,4 +1,7 @@
 source.workdir=/
 source.catalog.tree.deep=10000
-source.read.pool.size=5
+source.read.pool.size=6
+source.filenames.queue.size=100
 destination.subcatalog=ftp
+disk.c.count.limit=5000
+logs.path=C:/ftp
